--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,152 @@
 body{
+  background-color: white;
+  color: #40514E;
   margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
 }
 
 h1{
-  margin-top: 0;
+  color: #66BFBF;
+  font-size: 5.625rem;
+  line-height: 2;
+  margin: 3.125rem auto 0;
+  font-family: 'Sacramento', cursive;
 }
-div{
-  border: solid;
+
+h2{
+  color: #66BFBF;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
 }
+
+h3{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+}
+
+p{
+  line-height: 2;
+}
+
+a{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #EAF6F6;
+}
+
+hr{
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 3.5%;
+  margin: 100px auto;
+}
+
 .top-container{
   background-color: #bae8e8;
-  border-width: 10px;
-  padding: 20px;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container{
-  background-color: red;
-  border-width: 20px;
+  margin: 100px 0;
 }
 
 .bottom-container{
-  background-color: yellow;
-  border-width: 10px;
+  background-color: #66bfbf;
+  padding: 50px 0 20px;
 }
 .size200px{
   height: 200px;
-  width: 200px;
+  width: 200px
 }
-.left{
-  margin: 0;
+
+.pro{
+  text-decoration: underline;
 }
-.center{
-  margin-left: 260px;
+
+.bottom-cloud{
+  position: absolute;
+  left: 250px;
+  bottom: 300px;
 }
-.right{
-  margin-left: 500px;
+
+.top-cloud{
+  position: absolute;
+  right: 300px;
+  top: 40px;
+}
+
+.profile-picture{
+  margin: auto;
+  width: 10%;
+}
+
+.intro{
+  margin: auto;
+  width: 30%;
+}
+
+.skill-row{
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.mitu-img{
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.npc-img{
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.contact-message{
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.copyright{
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
